Now adds lists using the service

--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -35,6 +35,6 @@
         </button>
       </div>
     </ion-list>
-    <button ion-button block>Add list</button>
+    <button ion-button block (click)="addList()">Add list</button>
   </div>
 </ion-content>
