--- a/src/pages/pending/pending.html
+++ b/src/pages/pending/pending.html
@@ -5,15 +5,23 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-card *ngFor="let item of lists">  
-    <ion-item>
-      {{ item.name }}
+  <ion-card *ngFor="let list of lists">  
+    <ion-item color="dark">
+      {{ list.name }}
+      <ion-note item-right>
+        {{ list.items.length }} items
+      </ion-note>
     </ion-item>
-    <h2>{{ item.nombre }}</h2>
     <ion-list>
-      <ion-item *ngFor="let listItem of item.items">
-        <ion-icon name="arrow-dropright-circle"></ion-icon>
-        {{ listItem.name }}
+      <ion-item *ngFor="let item of list.items | slice:0:2">
+        <ion-icon *ngIf="!item.finish; else elseBlock" name="square-outline"></ion-icon>
+        <ng-template #elseBlock>
+          <ion-icon name="checkbox-outline"></ion-icon>
+        </ng-template>
+        {{ item.name }}
+      </ion-item>
+      <ion-item *ngIf="list.items.length > 2" text-center>
+        <ion-icon name="arrow-dropdown" color="primary"></ion-icon>
       </ion-item>
     </ion-list>
   </ion-card>
