--- a/src/pages/pending/pending.html
+++ b/src/pages/pending/pending.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Pending lists</ion-title>
+    <ion-title>Pending</ion-title>
   </ion-navbar>
 </ion-header>
 
