--- a/src/pages/pending/pending.html
+++ b/src/pages/pending/pending.html
@@ -1,29 +1,31 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Pending</ion-title>
+    <ion-title>Pending lists</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <ion-card *ngFor="let list of lists; let index = index" (click)="seeDetails(index)">
-    <ion-item color="dark">
-      {{ list.name }}
-      <ion-note item-right>
-        {{ list.items.length }} items
-      </ion-note>
-    </ion-item>
-    <ion-list>
-      <ion-item *ngFor="let item of list.items | slice:0:2">
-        <ion-icon *ngIf="!item.finish; else elseBlock" name="square-outline"></ion-icon>
-        <ng-template #elseBlock>
-          <ion-icon name="checkbox-outline"></ion-icon>
-        </ng-template>
-        {{ item.name }}
+    <div *ngIf="!wishListService.isFinished(index)">
+      <ion-item color="dark">
+        {{ list.name }}
+        <ion-note item-right>
+          {{ list.items.length }} items
+        </ion-note>
       </ion-item>
-      <ion-item *ngIf="list.items.length > 2" text-center>
-        <ion-icon name="arrow-dropdown" color="primary"></ion-icon>
-      </ion-item>
-    </ion-list>
+      <ion-list>
+        <ion-item *ngFor="let item of list.items | slice:0:2">
+          <ion-icon *ngIf="!item.finish; else elseBlock" name="square-outline"></ion-icon>
+          <ng-template #elseBlock>
+            <ion-icon name="checkbox-outline"></ion-icon>
+          </ng-template>
+          {{ item.name }}
+        </ion-item>
+        <ion-item *ngIf="list.items.length > 2" text-center>
+          <ion-icon name="arrow-dropdown" color="primary"></ion-icon>
+        </ion-item>
+      </ion-list>
+    </div>
   </ion-card>
   <ion-fab right bottom (click)="goToAddPage()">
     <button ion-fab color="primary"><ion-icon name="add"></ion-icon></button>
